# budgie

./: .gitignore  DEPLOY.md  Dockerfile  HANDOVER.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  HANDOVER.md  manage.py  pyproject.toml
backend/api/: _shared.py  auth.py  middleware.py  models.py  schemas.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/api/views/: admin.py  auth.py  buckets.py  insights.py  settings.py  transactions.py  users.py
backend/budgie/: __init__.py  asgi.py  settings.py  urls.py
backend/tests/: test_api.py
frontend/: DESIGN.md  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  global.css  main.tsx  theme.ts
frontend/src/api/: client.ts  format.ts  generated.ts  index.ts
frontend/src/components/: index.ts
frontend/src/hooks/: useTheme.ts
frontend/src/router/: generated.ts  index.ts  routes.ts
frontend/src/stores/: authStore.ts  index.ts  themeStore.ts  toastStore.ts
frontend/test-results/admin-buckets-admin-buckets-page-shows-all-buckets/: error-context.md
frontend/test-results/admin-transactions-admin-t-d6105-page-shows-all-transactions/: error-context.md
frontend/test-results/admin-users-admin-users-page-shows-user-list/: error-context.md
frontend/test-results/buckets-create-a-bucket/: error-context.md
frontend/tests/: setup.ts
nginx/: nginx.conf
scripts/: entrypoint.sh  redeploy.sh
(+108 files in other folders)
