[project]
name = "budgie-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-ninja>=1.3.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.27.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["budgie", "api", "tests"]

[tool.ruff]
target-version = "py314"
src = ["budgie", "api", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "T20", "BLE", "RUF"]
ignore = ["RUF012"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "budgie.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
